machine prime drone implementation #1 + fixes

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -70,6 +70,9 @@
  tec_loc_psychic_pop_output:0 "£tec_psychic_icon£ Psychic Pop Output"
  tec_loc_automation_output:0 "£job_roboticist£ Automation Output"
 
+ tec_loc_machine_processing:0 "£sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!"
+ tec_loc_machine_redirection:0 "£sr_tec_machine_processing_redirection£ §Y$sr_tec_machine_processing_redirection$§!"
+
  tec_loc_habitability:0 "£mod_habitability_floor_add£ Habitability"
  tec_loc_planet_capacity:0 "£mod_planet_carry_cap_add£ $CARRY_CAP$"
  tec_loc_planet_build_speed:0 "£mod_planet_building_build_speed_mult£ $MOD_PLANET_BUILDING_BUILD_SPEED_MULT$"
