--- a/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
@@ -70,51 +70,55 @@
  # --------------- Directive civics
 	# TO DO remove the original one below
 	# REDO REDO REDO
-		civic_tec_machine_prime_directive:0 "Prime Directive"
-		civic_tec_machine_prime_directive_desc:0 "This Machine Empire relies most of the administrative and productive tasks on semi-autonomous planetary drones, carefully designed with the state of the art technologies and with an unmatched programation for serving the empire interests."
-		civic_tooltip_tec_machine_prime_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§!.\n- $job_tec_prime_drone_effect_desc$\n\n"
+		#civic_tec_machine_prime_directive:0 "Prime Directive"
+		#civic_tec_machine_prime_directive_desc:0 "This Machine Empire relies most of the administrative and productive tasks on semi-autonomous planetary drones, carefully designed with the state of the art technologies and with an unmatched programation for serving the empire interests."
+		#civic_tooltip_tec_machine_prime_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§!.\n- $job_tec_prime_drone_effect_desc$\n\n"
 	# REDO REDO REDO
 	civic_tec_machine_prime_directive:0 "Prime Directive"
 	civic_tec_machine_prime_directive_desc:0 "TO DO"
-	civic_tec_machine_prime_directive_effects:0 "$tec_tooltip_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class provide additional £stability£ §YStability§! per $tec_loc_capital_tier$.\nTO DO\n"
+	civic_tec_machine_prime_directive_effects:0 "$tec_tooltip_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class provide §G2§! additional £stability£ §YStability§! and increase £job£ §YDrone Output§! by §G1.5%§! per $tec_loc_capital_tier$.\nTO DO\n"
 
 	civic_tec_machine_alpha_directive:0 "Alpha Directive"
 	civic_tec_machine_alpha_directive_desc:0 "TO DO"
 	civic_tec_machine_alpha_directive_effects:0 "$tec_tooltip_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £unity£ §YUnity§!, and amplify the planet output of £unity£ §YUnity§! by §G2.5%§!, per $tec_loc_capital_tier$\n\n§HTranscendental Ascent§!: The extra £unity£ §YUnity§! output is applied instead to £job_priest£ §YAscendant§! drones.\n"
 
+	civic_tec_machine_epsilon_directive:0 "Epsilon Directive"
+	civic_tec_machine_epsilon_directive_desc:0 "TO DO"
+	civic_tec_machine_epsilon_directive_effects:0 "$tec_tooltip_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £alloys£ §YAlloys§!, and amplify the planet output of £alloy£ §YAlloys§! by §G2.5%§!, per $tec_loc_capital_tier$\n\nTO DO"
+
 	civic_tec_machine_lambda_directive:0 "Lambda Directive"
 	civic_tec_machine_lambda_directive_desc:0 "TO DO"
-	civic_tec_machine_lambda_directive_effects:0 "$tec_tooltip_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £trigger_tec_research£ §YResearch§!, and amplify the output of £job_calculator£ §Y$job_calculator_plural$§! drones by §G2.5%§!, per $tec_loc_capital_tier$\n\n§HInput Iterators§!: The extra output of £job_calculator£ §Y$job_calculator_plural$§! drones is added to the rate of §YIteration§! instead, at a local scale.\n"
+	civic_tec_machine_lambda_directive_effects:0 "$tec_tooltip_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class produce additional £trigger_tec_research£ §YResearch§!, and amplify the job §Y$tec_loc_research_resources$§! output by §G2.5%§!, per $tec_loc_capital_tier$\n\n§HInput Iterators§!: The extra job §Y$tec_loc_research_resources$§! output is added to the rate of §YIteration§! instead, at a local scale.\n"
 
 	civic_tec_machine_omega_directive:0 "Omega Directive"
 	civic_tec_machine_omega_directive_desc:0 "TO DO "
-	civic_tec_machine_omega_directive_effects:0 "$tec_tooltip_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class provide additional £mod_country_admin_cap_add£ §Y$MOD_COUNTRY_ADMIN_CAP_ADD$§! per $tec_loc_capital_tier$.\n£job_coordinator£ §YCoordinator§! drones will provide §G+1§! extra £mod_edict_cap_add£ §YEdict Fund§!\n\n§HRogue servitors§!: £job_biotrophy£ §YBiotrophies§! inherit the extra §G+1§! £mod_edict_cap_add£ §YEdict Fund§! effect.\n"
+	civic_tec_machine_omega_directive_effects:0 "$tec_tooltip_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class provide additional £mod_country_admin_cap_add£ §Y$MOD_COUNTRY_ADMIN_CAP_ADD$§! per $tec_loc_capital_tier$.\n£job_coordinator£ §YCoordinator§! drones will provide §G+2§! extra £mod_edict_cap_add£ §YEdict Fund§!\n\n§HRogue servitors§!: £job_biotrophy£ §YBiotrophies§! inherit the extra §G+1§! £mod_edict_cap_add£ §YEdict Fund§! effect.\n"
  # /
 
  # --------------- Cluster Civics
 	civic_tec_machine_performance_cluster:0 "Performance Monitors"
 	civic_tec_machine_performance_cluster_desc:0 "Originally designed for improving production, this gestalt conciousness has the constant desire and priority on self-improvement and fabrication boosting, making specifically designed drones that manifest, and control it, at a planetary scale."
-	civic_tooltip_tec_machine_performance_cluster_effects:0 "$tec_tooltip_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_performance_drone£ §Y$job_tec_performance_drone_plural$§!.\n- $job_tec_performance_drone_effect_desc$\n\n$tec_loc_amenities$ from £job_maintenance_drone£ $job_maintenance_drone_plural$: §G+1§!"
+	civic_tooltip_tec_machine_performance_cluster_effects:0 "$tec_tooltip_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_performance_drone£ §Y$job_tec_prime_performance_drone_plural$§!.\n- $job_tec_prime_performance_drone_effect_desc$\n\n$tec_loc_amenities$ from £job_maintenance_drone£ $job_maintenance_drone_plural$: §G+1§!"
 
 	# Research - Hypercluster
 	civic_tec_machine_research_cluster:0 "Research Hyperclusters"
 	civic_tec_machine_research_cluster_desc:0 "An array of powerful research clusters conform the core of this machine conciousness, making its focus on technological development and constant upgrades to the whole collective."
-	civic_tooltip_tec_machine_research_cluster_effects:0 "$tec_tooltip_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_hypercluster_drone£ §Y$job_tec_hypercluster_drone_plural$§!.\n- $job_tec_hypercluster_drone_effect_desc$\n\n£trigger_tec_research£ §YResearch Jobs§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
+	civic_tooltip_tec_machine_research_cluster_effects:0 "$tec_tooltip_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_research_drone£ §Y$job_tec_prime_research_drone_plural$§!.\n- $job_tec_prime_research_drone_effect_desc$\n\n£trigger_tec_research£ §YResearch Jobs§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
 
 	# Maintenance - Reimaginators
 	civic_tec_machine_reimaginator_cluster:0 "Self-Reimaginators"
 	civic_tec_machine_reimaginator_cluster_desc:0 "Each little piece, gear and circuit is the key of the foundation of this machine conciousness, so every design must be perfect; Each assembled part, drone and ship is supervised by specifically designed drones, which not only will ensure the correct working but also will seek any feasible way to improve to the biggest degree possible, keeping the assembly lines and the planet development as streamlined and perfect as computational power can allow."
-	civic_tooltip_tec_machine_reimaginator_cluster_effects:0 "$tec_tooltip_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_reimaginator_drone£ §Y$job_tec_reimaginator_drone_plural$§!, taking also charge of the capital and building £job_roboticist£ §YAssembly§!.\n- $job_tec_reimaginator_drone_effect_desc$\n\n$tec_loc_amenities$ from £job_fabricator£ $job_fabricator_plural$ provide §G+0.5%§! £job_roboticist£ §YAssembly speed§!.\n\n§HThis civic restricts the use of Assembly Buildings.§!"
+	civic_tooltip_tec_machine_reimaginator_cluster_effects:0 "$tec_tooltip_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_reimaginator_drone£ §Y$job_tec_prime_reimaginator_drone_plural$§!, taking also charge of the capital and building £job_roboticist£ §YAssembly§!.\n- $job_tec_prime_reimaginator_drone_effect_desc$\n\n$tec_loc_amenities$ from £job_fabricator£ $job_fabricator_plural$ provide §G+0.5%§! £job_roboticist£ §YAssembly speed§!.\n\n§HThis civic restricts the use of Assembly Buildings.§!"
 
 	# Unity - 
 	civic_tec_machine_debugger_cluster:0 "Code Debuggers"
 	civic_tec_machine_debugger_cluster_desc:0 "Any bug and defective line of code can suppose a extreme danger to the stability and purity of this Machine Intelligence, so a special kind of more capable and precise drone was created to battle, solve and avoid those issues, ensuring a correct development and exponential self improvement."
-	civic_tooltip_tec_machine_debugger_cluster_effects:0 "$tec_tooltip_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_debugger_drone£ §Y$job_tec_debugger_drone_plural$§!.\n- $job_tec_debugger_drone_effect_desc$\n\n£unity£ §YUnity Jobs§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
+	civic_tooltip_tec_machine_debugger_cluster_effects:0 "$tec_tooltip_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_debugger_drone£ §Y$job_tec_prime_debugger_drone_plural$§!.\n- $job_tec_prime_debugger_drone_effect_desc$\n\n£unity£ §YUnity Jobs§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
 
 	# Armies - Megaform
 	civic_tec_machine_warform_cluster:0 "Imposing Megaforms"
 	civic_tec_machine_warform_cluster_desc:0 "The need of security, defense and a proper outpost development required the invention of more solid lines of defense, in this case a new kind of drone capable of not only maintaining structures and making specific tasks, but also having the firepower and defensive capacities that would ensure the safety of lesser drone units."
-	civic_tooltip_tec_machine_warform_cluster_effects:0 "$tec_tooltip_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_warform_drone£ §Y$job_tec_warform_drone_plural$§!.\n- $job_tec_warform_drone_effect_desc$\n\n£job_soldier£ §YMilitary Jobs§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
+	civic_tooltip_tec_machine_warform_cluster_effects:0 "$tec_tooltip_cluster_civic$\n\n£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_warform_drone£ §Y$job_tec_prime_warform_drone_plural$§!.\n- $job_tec_prime_warform_drone_effect_desc$\n\n£job_soldier£ §YMilitary Jobs§! boost the production of £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! by §G5%§! each."
 
 	#New - adquisition - production change based on the planet type
 	civic_tec_machine_acquisition_cluster:0 "Acquisition Cores"
@@ -136,11 +140,17 @@
 	sr_tec_machine_processing_local:0 "Processing Capacity"
 	sr_tec_machine_processing_local_desc:0 "A macro-computer requires a proper redirection of calculations, processes and data flows; it is the duty of these transmission packets to be properly sorted, refined and improved, ensuring each drone, each tool, each protocol within the collective work in perfect synchrony."
 
+	mod_planets_sr_tec_machine_processing_local_produces_add: "Local $tec_loc_machine_processing$"
+
 	sr_tec_machine_processing_empire:0 "Processing Capacity"
 	sr_tec_machine_processing_empire_desc:0 "A macro-computer requires a proper redirection of calculations, processes and data flows; it is the duty of these transmission packets to be properly sorted, refined and improved, ensuring each drone, each tool, each protocol within the collective work in perfect synchrony."
 
+	mod_country_sr_tec_machine_processing_local_produces_add: "Empire $tec_loc_machine_processing$"
+
 	sr_tec_machine_processing_redirection:0 "Redirected Processing"
 	sr_tec_machine_processing_redirection_desc:0 "Several protocols have been redirected to empower the planet processing relays, providing specifically charged packets of processing capacity, increasing the output at a local scale."
+
+	mod_country_sr_tec_machine_processing_redirection_produces_add: "Local $tec_loc_machine_processing_redirection$"
 
 	building_tec_machine_intranetwork:0 "Intra-Network Core"
 	building_tec_machine_intranetwork_desc:0 "TO DO."
@@ -169,7 +179,7 @@
 	job_tec_prime_drone:0 "Prime Cluster"
 	job_tec_prime_drone_plural:0 "Prime Clusters"
 	job_tec_prime_drone_desc:0 "Highly specialized drones that represents a direct manifestation of the machine consciousness, primarily developed as a balanced way of controlling and amplifying the development of the collective as a whole."
-	job_tec_prime_drone_effect_desc:0 "£job_tec_prime_drone£ $job_tec_prime_drone_plural$ consume £energy£ §YEnergy§! for generating £unity£ §Y$unity$§!, £amenities_no_happiness£ §YAmenities§! and £sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!, increased by the $tec_loc_capital_tier$."
+	job_tec_prime_drone_effect_desc:0 "£job_tec_prime_drone£ $job_tec_prime_drone_plural$ consume £energy£ §YEnergy§! for generating £unity£ §Y$unity$§!, §Y$tec_loc_amenities_gestalt$§! and §Y$tec_loc_machine_processing$§!, increased by the $tec_loc_capital_tier$."
 	mod_job_tec_prime_drone_add:0 "$job_tec_prime_drone$ Jobs"
 	mod_job_tec_prime_drone_per_pop:0 "§G+1§! £mod_job_tec_prime_drone_add£ $job_tec_prime_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_prime_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_prime_drone_add£ per $VALUE$ £pop£"
