--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -530,35 +530,35 @@ tec_jump_empty:0 "\n\n"
  job_tec_omega_drone_effect_desc:0 "£job_tec_omega_drone£ $job_tec_omega_drone_plural$ converts large amounts of £energy£ §YEnergy§! into £unity£ §Y$unity$§!, while also generating £amenities_no_happiness£ §YAmenities§!"
  mod_job_tec_omega_drone_add:0 "$job_tec_omega_drone$ Jobs"
 
- job_tec_performance_drone:0 "Monitor Cluster"
- job_tec_performance_drone_plural:0 "Monitor Clusters"
- job_tec_performance_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, with the single purpose of improving the capacities of the collective as a whole reducing redundant or non-effective tasks."
- job_tec_performance_drone_effect_desc:0 "£job_tec_performance_drone£ $job_tec_performance_drone_plural$ uses large amounts of £energy£ §YEnergy§! for increasing £job£ §YJob Output§! and §YUpkeep§!, while also generating £amenities_no_happiness£ §YAmenities§!"
- mod_job_tec_performance_drone_add:0 "$job_tec_performance_drone$ Jobs"
+ job_tec_prime_performance_drone:0 "Monitor Cluster"
+ job_tec_prime_performance_drone_plural:0 "Monitor Clusters"
+ job_tec_prime_performance_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, with the single purpose of improving the capacities of the collective as a whole reducing redundant or non-effective tasks."
+ job_tec_prime_performance_drone_effect_desc:0 "£job_tec_prime_performance_drone£ $job_tec_prime_performance_drone_plural$ uses large amounts of £energy£ §YEnergy§! for increasing £job£ §YJob Output§! and §YUpkeep§!, while also generating £amenities_no_happiness£ §YAmenities§!"
+ mod_job_tec_prime_performance_drone_add:0 "$job_tec_prime_performance_drone$ Jobs"
 
- job_tec_hypercluster_drone:0 "Autonomous Cluster"
- job_tec_hypercluster_drone_plural:0 "Autonomous Clusters"
- job_tec_hypercluster_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, serving as multiplatform for information processing, technological development and overall advancements."
- job_tec_hypercluster_drone_effect_desc:0 "£job_tec_hypercluster_drone£ $job_tec_hypercluster_drone_plural$ uses large amounts of £energy£ §YEnergy§! for generating £trigger_tec_research£ §YResearch§! and £amenities_no_happiness£ §YAmenities§!"
- mod_job_tec_hypercluster_drone_add:0 "$job_tec_hypercluster_drone$ Jobs"
+ job_tec_prime_research_drone:0 "Innovation Cluster"
+ job_tec_prime_research_drone_plural:0 "Innovation Clusters"
+ job_tec_prime_research_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, serving as multiplatform for information processing, technological development and overall advancements."
+ job_tec_prime_research_drone_effect_desc:0 "£job_tec_prime_research_drone£ $job_tec_prime_research_drone_plural$ uses large amounts of £energy£ §YEnergy§! for generating £trigger_tec_research£ §YResearch§! and £amenities_no_happiness£ §YAmenities§!"
+ mod_job_tec_prime_research_drone_add:0 "$job_tec_prime_research_drone$ Jobs"
 
- job_tec_reimaginator_drone:0 "Reimaginator Cluster"
- job_tec_reimaginator_drone_plural:0 "Reimaginator Clusters"
- job_tec_reimaginator_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, constantly searching new drone forms that would suit assigned task better, or have more overall performance."
- job_tec_reimaginator_drone_effect_desc:0 "£job_tec_reimaginator_drone£ $job_tec_reimaginator_drone_plural$ uses large amounts of £energy£ §YEnergy§! and £alloys£ §YAlloys§! for assembling £job_roboticist£ §YPops§! and £amenities_no_happiness£ §YAmenities§!"
- mod_job_tec_reimaginator_drone_add:0 "$job_tec_reimaginator_drone$ Jobs"
+ job_tec_prime_reimaginator_drone:0 "Reimaginator Cluster"
+ job_tec_prime_reimaginator_drone_plural:0 "Reimaginator Clusters"
+ job_tec_prime_reimaginator_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, constantly searching new drone forms that would suit assigned task better, or have more overall performance."
+ job_tec_prime_reimaginator_drone_effect_desc:0 "£job_tec_prime_reimaginator_drone£ $job_tec_prime_reimaginator_drone_plural$ uses large amounts of £energy£ §YEnergy§! and £alloys£ §YAlloys§! for assembling £job_roboticist£ §YPops§! and £amenities_no_happiness£ §YAmenities§!"
+ mod_job_tec_prime_reimaginator_drone_add:0 "$job_tec_prime_reimaginator_drone$ Jobs"
 
- job_tec_debugger_drone:0 "Debugger Cluster"
- job_tec_debugger_drone_plural:0 "Debugger Cluster"
- job_tec_debugger_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, and constantly monitor programming code of the whole collective seeking possible corruption or deviancy."
- job_tec_debugger_drone_effect_desc:0 "£job_tec_debugger_drone£ $job_tec_debugger_drone_plural$ uses large amounts of £energy£ §YEnergy§! for greatly reducing £crime£ §YDeviancy§! and generating £amenities_no_happiness£ §YAmenities§!"
- mod_job_tec_debugger_drone_add:0 "$job_tec_debugger_drone$ Jobs"
+ job_tec_prime_debugger_drone:0 "Debugger Cluster"
+ job_tec_prime_debugger_drone_plural:0 "Debugger Cluster"
+ job_tec_prime_debugger_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, and constantly monitor programming code of the whole collective seeking possible corruption or deviancy."
+ job_tec_prime_debugger_drone_effect_desc:0 "£job_tec_prime_debugger_drone£ $job_tec_prime_debugger_drone_plural$ uses large amounts of £energy£ §YEnergy§! for greatly reducing £crime£ §YDeviancy§! and generating £amenities_no_happiness£ §YAmenities§!"
+ mod_job_tec_prime_debugger_drone_add:0 "$job_tec_prime_debugger_drone$ Jobs"
 
- job_tec_warform_drone:0 "Warform Cluster"
- job_tec_warform_drone_plural:0 "Warform Cluster"
- job_tec_warform_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, being mobile platforms of control, defense and attack that protects the primary nexus of the planet with high efficiency, while also coordinating external fleet movements on the fly."
- job_tec_warform_drone_effect_desc:0 "£job_tec_warform_drone£ $job_tec_warform_drone_plural$ uses large amounts of £energy£ §YEnergy§! for increasing £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, spawning £defense_army£ §Y$tec_warform_def_plural$§! and generating £amenities_no_happiness£ §YAmenities§!"
- mod_job_tec_warform_drone_add:0 "$job_tec_warform_drone$ Jobs"
+ job_tec_prime_warform_drone:0 "Warform Cluster"
+ job_tec_prime_warform_drone_plural:0 "Warform Cluster"
+ job_tec_prime_warform_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, being mobile platforms of control, defense and attack that protects the primary nexus of the planet with high efficiency, while also coordinating external fleet movements on the fly."
+ job_tec_prime_warform_drone_effect_desc:0 "£job_tec_prime_warform_drone£ $job_tec_prime_warform_drone_plural$ uses large amounts of £energy£ §YEnergy§! for increasing £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, spawning £defense_army£ §Y$tec_warform_def_plural$§! and generating £amenities_no_happiness£ §YAmenities§!"
+ mod_job_tec_prime_warform_drone_add:0 "$job_tec_prime_warform_drone$ Jobs"
 
 # ---------------------------------------------------------------
 #	ETHIC FEATURES
