--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -1082,27 +1082,27 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_machine_performance_cluster:0 "Performance Monitors"
  civic_tec_machine_performance_cluster_desc:0 "Originally designed for improving production, this gestalt conciousness has the constant desire and priority on self-improvement and fabrication boosting, making specifically designed drones that manifest, and control it, at a planetary scale."
- civic_tooltip_tec_machine_performance_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_performance_drone£ §Y$job_tec_performance_drone_plural$§!.\n- $job_tec_performance_drone_effect_desc$\n\n$tec_loc_amenities$ from £job_maintenance_drone£ $job_maintenance_drone_plural$: §G+1§!"
+ civic_tooltip_tec_machine_performance_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_prime_performance_drone£ §Y$job_tec_prime_performance_drone_plural$§!.\n- $job_tec_prime_performance_drone_effect_desc$\n\n$tec_loc_amenities$ from £job_maintenance_drone£ $job_maintenance_drone_plural$: §G+1§!"
 
  # Research - Hypercluster
  civic_tec_machine_research_cluster:0 "Research Hyperclusters"
  civic_tec_machine_research_cluster_desc:0 "An array of powerful research clusters conform the core of this machine conciousness, making its focus on technological development and constant upgrades to the whole collective."
- civic_tooltip_tec_machine_research_cluster_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_hypercluster_drone£ §Y$job_tec_hypercluster_drone_plural$§!.\n- $job_tec_hypercluster_drone_effect_desc$\n\n"
+ civic_tooltip_tec_machine_research_cluster_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_prime_research_drone£ §Y$job_tec_prime_research_drone_plural$§!.\n- $job_tec_prime_research_drone_effect_desc$\n\n"
 
  # Maintenance - Reimaginators
  civic_tec_machine_reimaginator_cluster:0 "Self-Reimaginators"
  civic_tec_machine_reimaginator_cluster_desc:0 "Each little piece, gear and circuit is the key of the foundation of this machine conciousness, so every design must be perfect; Each assembled part, drone and ship is supervised by specifically designed drones, which not only will ensure the correct working but also will seek any feasible way to improve to the biggest degree possible, keeping the assembly lines and the planet development as streamlined and perfect as computational power can allow."
- civic_tooltip_tec_machine_reimaginator_cluster_effects:0 "£building£ §YCapital Buildings§! provide a £job_tec_reimaginator_drone£ §Y$job_tec_reimaginator_drone_plural$§!, which replace the capital and building £job_roboticist£ §YAssembly§!.\n- $job_tec_reimaginator_drone_effect_desc$\n\n$tec_loc_amenities$ from £job_fabricator£ $job_fabricator_plural$: §G+1§!\n\n§HThis civic restricts the use of Assembly Buildings.§!"
+ civic_tooltip_tec_machine_reimaginator_cluster_effects:0 "£building£ §YCapital Buildings§! provide a £job_tec_prime_reimaginator_drone£ §Y$job_tec_prime_reimaginator_drone_plural$§!, which replace the capital and building £job_roboticist£ §YAssembly§!.\n- $job_tec_prime_reimaginator_drone_effect_desc$\n\n$tec_loc_amenities$ from £job_fabricator£ $job_fabricator_plural$: §G+1§!\n\n§HThis civic restricts the use of Assembly Buildings.§!"
 
  # Unity - Depurator
  civic_tec_machine_debugger_cluster:0 "Code Debuggers"
  civic_tec_machine_debugger_cluster_desc:0 "Any bug and defective line of code can suppose a extreme danger to the stability and purity of this Machine Intelligence, so a special kind of more capable and precise drone was created to battle, solve and avoid those issues, ensuring a correct development and exponential self improvement."
- civic_tooltip_tec_machine_debugger_cluster_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_debugger_drone£ §Y$job_tec_debugger_drone_plural$§!.\n- $job_tec_debugger_drone_effect_desc$\n\n"
+ civic_tooltip_tec_machine_debugger_cluster_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_prime_debugger_drone£ §Y$job_tec_prime_debugger_drone_plural$§!.\n- $job_tec_prime_debugger_drone_effect_desc$\n\n"
 
  # Armies - Megaform
  civic_tec_machine_warform_cluster:0 "Imposing Megaforms"
  civic_tec_machine_warform_cluster_desc:0 "The need of security, defense and a proper outpost development required the invention of more solid lines of defense, in this case a new kind of drone capable of not only maintaining structures and making specific tasks, but also having the firepower and defensive capacities that would ensure the safety of lesser drone units."
- civic_tooltip_tec_machine_megaform_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_warform_drone£ §Y$job_tec_warform_drone_plural$§!.\n- $job_tec_warform_drone_effect_desc$\n\n£mod_country_naval_cap_add£ Naval Capacity from £job_warrior_drone£ $job_warrior_drone_plural$: §G+1§!"
+ civic_tooltip_tec_machine_megaform_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_prime_warform_drone£ §Y$job_tec_prime_warform_drone_plural$§!.\n- $job_tec_prime_warform_drone_effect_desc$\n\n£mod_country_naval_cap_add£ Naval Capacity from £job_warrior_drone£ $job_warrior_drone_plural$: §G+1§!"
 
 # Machine Mechanic Civics
 # ------------------------------------------------------------
