machine civic changes pending dds + more

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -1,6 +1,79 @@
 ﻿l_english:
 # R6 - Authority Patch
 
+
+# ------------------------------------------------- Traits
+ # --------------- Organic
+	trait_tec_lithotrophic:0 "Lithotrophic"
+	trait_tec_lithotrophic_desc:0 "§LThis species evolved from organisms able to consume inorganic substrate and materials in order to suit metabolic needs. While now they can adapt their diet to any kind of substance, this led to incredible survival and endurance capabilities.§!"
+	TRAIT_TEC_LITOTROPHIC_EFFECT:0 "£pop£ Species £food£ Food Upkeep: §G-0.5§!\n£pop£ Species £minerals£ Minerals Upkeep: §R+0.5§!"
+
+	trait_tec_unity_eater:0 "Synchronic Psyche"
+	trait_tec_unity_eater_desc:0 "§LThis species has a specific need of psychic nourishment complimentary to its organic needs, manifesting in the consumption of redundant thoughts, feelings or what some may call ''psychic'' aura.§!"
+	TRAIT_TEC_UNITY_EATER_EFFECT:0 "£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §G-50%§!\n£pop£ Pop £unity£ Unity Upkeep: §R+0.25§!"
+
+	trait_tec_spore_growth:0 "Sporal Germination"
+	trait_tec_spore_growth_desc:0 "§LTO DO§!"
+	TRAIT_TEC_SPORE_GROWTH_EFFECT:0 "Each pop working as a slave or better produces §G0.02§! £mod_pop_growth_speed£ §YPop Growth§!.\n\nThis stacks with natural §HOrganic Pop Growth§!."
+
+	trait_tec_twin_growth:0 "Dual Gametoids"
+	trait_tec_twin_growth_desc:0 "§LTO DO§!"
+	TRAIT_TEC_TWIN_GROWTH_EFFECT:0 "Each time a pop of this species is generated, there is a §G15%§! chance of another pop being £mod_pop_growth_speed£ §GGenerated§!."
+
+	trait_tec_positive_thoughts:0 "Positivist"
+	trait_tec_positive_thoughts_desc:0 "§LThis species is able to find a light amongst an infinite empty void, and a song amongst a cascade of emptiness, always keeping positivity abroad.§!"
+	TRAIT_TEC_POSITIVE_THOUGHTS_EFFECT:0 "Can gain §GBonus§! Happiness whenever something §YPositive§! happens to the empire"
+
+	trait_tec_negative_thoughts:0 "Pessimistic"
+	trait_tec_negative_thoughts_desc:0 "§LThis species is prone to negative, pessimistic and nihilistic thoughts.§!"
+	TRAIT_TEC_NEGATIVE_THOUGHTS_EFFECT:0 "Can suffer §RReduced§! Happiness whenever something §YNegative§! happens to the empire"
+
+	trait_tec_indulgent:0 "Indulgent"
+	trait_tec_indulgent_desc:0 "§LWhen it comes to creating, moving and spending cash, this species rocks! Excessive purchases, strict advertisement follow-ups and dexterity when buying whatever they need, or not.§!"
+
+	trait_tec_austere:0 "Austere"
+	trait_tec_austere_desc:0 "§LAdapted to a simple life, this species try to avoid wasting any excess of income, living with the minimal amount possible.§!"
+ # /
+
+ # --------------- Robotic
+	trait_tec_robot_deployment:0 "Modular Deployment"
+	trait_tec_robot_deployment_desc:0 "§LThe creation of this mechanical species was highly influenced by industrial principles of compactness and efficient use of space when transported or relocated, which are smartly applied and expanded on their actual designs.§!"
+	TRAIT_TEC_ROBOT_DEPLOYMENT_EFFECT:0 "New colonies will gain §Y1§! additional £pop£ Pop.\nPop Housing usage: §G-10%§!"
+
+	trait_tec_robot_builders:0 "Micro-Assemblers"
+	trait_tec_robot_builders_desc:0 "§LThis cybernetic unit works in tandem with their kind to generate dense microstructures later meshed and applied on macrostructures as a way to rapidly generate any type of constructive element of area.§!"
+	trait_tec_robot_builders_effect:0 "$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$ per Pop: §G+1.5%§!\n"
+
+	trait_tec_robot_megastructural:0 "Kilostructuractors"
+	trait_tec_robot_megastructural_desc:0 "§LEach unit of this cybernetic template is equiped with internal nanofurnaces and tools used to create pieces and elements of projects that, in some cases, surpasses the local processing capacity of comprehension.§!"
+	trait_tec_robot_megastructural_effect:0 "$MOD_MEGASTRUCTURE_BUILDING_BUILD_SPEED_MULT$ per Pop: §G+0.5%§!\n"
+
+	trait_tec_robot_climate_adaptation:0 "Climatic Recalibration"
+	trait_tec_robot_climate_adaptation_desc:0 "§LTO DO§!"
+	trait_tec_robot_climate_adaptation_effect:0 "TO DO\n"
+
+	trait_tec_robot_climate_reprocessing:0 "Adaptable Reprocessing"
+	trait_tec_robot_climate_reprocessing_desc:0 "§LTO DO§!"
+	trait_tec_robot_climate_reprocessing_effect:0 "TO DO\n"
+
+	trait_tec_machine_self_processing:0 "Sudo-Ego Depuration"
+	trait_tec_machine_self_processing_desc:0 "§LThese cybernetic units have developed a specific processing capacity retrofit which removes the need of further inputs due to internal redundant signal relays.§!"
+	trait_tec_machine_self_processing_effect:0 "Remove processing capacity usage from pops\nEnergy usage from pops +1\n"
+
+	trait_tec_machine_good_processing:0 "Interdependent Depuration"
+	trait_tec_machine_good_processing_desc:0 "§LThis cybernetic species is highly dependant of coordinated processes and signals, leading to discord and confusion in the lack of.§!"
+	trait_tec_machine_good_processing_effect:0 "Pop Processing capacity usage: -15%"
+
+	trait_tec_machine_bad_processing:0 "Reiterative Depuration"
+	trait_tec_machine_bad_processing_desc:0 "§LThis cybernetic species has a more lenient dependance of coordinated processes and signals due to a highly efficient depuration of residual waves and peer-to-peer intercommunication of orders.§!"
+	trait_tec_machine_bad_processing_effect:0 "Pop Processing capacity usage: +15%"
+
+	trait_tec_machine_todo:0 "TO DO"
+	trait_tec_machine_todo_desc:0 "§LTO DO?§!"
+	TRAIT_TEC_MACHINE_todo_EFFECT:0 "TO DO"
+ # /
+# /
+
 # ------------------------------------------------- Authorities
 # --------------- Jobs
 	# Academicians
@@ -74,6 +147,44 @@
 	mod_job_tec_hivelinked_trade_add:0 "$job_tec_hivelinked_trade$ Jobs"
 	mod_job_tec_hivelinked_trade_per_pop:0 "§G+1§! $job_tec_hivelinked_trade$ Job per $VALUE$ Pops"
 	mod_job_tec_hivelinked_trade_per_pop_short:0 "\n§G+1§! £mod_job_tec_hivelinked_trade_add£ per $VALUE$ £pop£"
+# /
+
+
+ # --------------- Jobs
+	#religious machines
+	job_tec_ascendant_drone:0 "Ascendant"
+	job_tec_ascendant_drone_plural:0 "Ascendants"
+	job_tec_ascendant_drone_desc:0 "Few are the drones consecrated to the task of fully understanding the meaning behind the questions faced without logical answer, but their duty at finding self-determination in either an external or internal answer drives them forward."
+	job_tec_ascendant_drone_effect_desc:0 "£job_tec_ascendant_drone£ $job_tec_ascendant_drone_plural$ consume £energy£ §YEnergy§! to generate £unity£ §YUnity§! and £engineering£ §YEngineering§!."
+	mod_job_tec_ascendant_drone_add:0 "$job_tec_ascendant_drone$ Jobs"
+	mod_job_tec_ascendant_drone_per_pop:0 "§G+1§! £mod_job_tec_ascendant_drone_add£ $job_tec_ascendant_drone$ Job per $VALUE$ Pops"
+	mod_job_tec_ascendant_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_ascendant_drone_add£ per $VALUE$ £pop£"
+
+	#Biotrophy types
+	job_tec_biotrophy_administrator:0 "Administrator"
+	job_tec_biotrophy_administrator_plural:0 "Administrators"
+	job_tec_biotrophy_administrator_desc:0 "Selected biotrophies charged with the task of representing a local political corp, creating the sense of natural hierarchy and social order the organics used to be adapted for, serving as a familiar authority figure controlled by our standards."
+	job_tec_biotrophy_administrator_effect_desc:0 "£job_tec_biotrophy_administrator£ $job_tec_biotrophy_administrator_plural$ turn extra £consumer_goods£ §YConsumer Goods§! into £unity£ §YUnity§!, £happiness£ Biotrophy §YHappiness§! and £job_roboticist£ §YComplex Drone Output§!."
+	mod_job_tec_biotrophy_administrator_add:0 "$job_tec_biotrophy_administrator$ Jobs"
+	mod_job_tec_biotrophy_administrator_per_pop:0 "§G+1§! £mod_job_tec_biotrophy_administrator_add£ $job_tec_biotrophy_administrator$ Job per $VALUE$ Pops"
+	mod_job_tec_biotrophy_administrator_per_pop_short:0 "\n§G+1§! £mod_job_tec_biotrophy_administrator_add£ per $VALUE$ £pop£"
+
+	job_tec_biotrophy_commissar:0 "Commissar"
+	job_tec_biotrophy_commissar_plural:0 "Commissars"
+	job_tec_biotrophy_commissar_desc:0 "Selected biotrophies assigned to the proper control and supervision of other biotrophies, the correct application of pampering culture and coverage of any possible dissidence or free-will crime at a local state, serving as an authoritarian figure."
+	job_tec_biotrophy_commissar_effect_desc:0 "£job_tec_biotrophy_commissar£ $job_tec_biotrophy_commissar_plural$ turn extra £consumer_goods£ §YConsumer Goods§! into £unity£ §YUnity§!, £crime_no_happiness£ §YDeviancy Reduction§! and £stability£ §YStability§!."
+	mod_job_tec_biotrophy_commissar_add:0 "$job_tec_biotrophy_commissar$ Jobs"
+	mod_job_tec_biotrophy_commissar_per_pop:0 "§G+1§! £mod_job_tec_biotrophy_commissar_add£ $job_tec_biotrophy_commissar$ Job per $VALUE$ Pops"
+	mod_job_tec_biotrophy_commissar_per_pop_short:0 "\n§G+1§! £mod_job_tec_biotrophy_commissar_add£ per $VALUE$ £pop£"
+
+	job_tec_biotrophy_caretaker:0 "Caretaker"
+	job_tec_biotrophy_caretaker_plural:0 "Caretakers"
+	job_tec_biotrophy_caretaker_desc:0 "Selected biotrophies assigned to take part on our pampering processes, by selectively caring and ensuring the other biotrophy population is healthy, happy and compliant; after all, the feeling of a organic face taking care of them motivate other organics."
+	job_tec_biotrophy_caretaker_effect_desc:0 "£job_tec_biotrophy_caretaker£ $job_tec_biotrophy_caretaker_plural$ turn extra £consumer_goods£ §YConsumer Goods§! into £unity£ §YUnity§!, £happiness£ Biotrophy §YHappiness§! and £mod_pop_growth_speed£ §YOrganic Pop Growth§!."
+	mod_job_tec_biotrophy_caretaker_add:0 "$job_tec_biotrophy_caretaker$ Jobs"
+	mod_job_tec_biotrophy_caretaker_per_pop:0 "§G+1§! £mod_job_tec_biotrophy_caretaker_add£ $job_tec_biotrophy_caretaker$ Job per $VALUE$ Pops"
+	mod_job_tec_biotrophy_caretaker_per_pop_short:0 "\n§G+1§! £mod_job_tec_biotrophy_caretaker_add£ per $VALUE$ £pop£"
+ # /
 # /
 
 # ------------------------------------------------- Policies
@@ -718,6 +829,14 @@
 	building_tec_biological_extractor_desc_genocidal:0 "TO DO"
  # /
 # /
+
+# ------------------------------------------------- Cyb B path
+# More like soft replicants
+	ap_tec_cybernetic_b_t1:0 "Enhanced Bioimplants"
+	ap_tec_cybernetic_b_t1_desc:0 "TO DO."
+
+	ap_tec_cybernetic_b_t2:0 "Upgraded Bionics"
+	ap_tec_cybernetic_b_t2_desc:0 "TO DO."
 
 # ------------------------------------------------- Psi B path
 # Whats the different with psionics? the difference of a warlock vs a sorcerer
