--- a/localisation/english/replace/zzzz_uml_modifier_l_english.yml
+++ b/localisation/english/replace/zzzz_uml_modifier_l_english.yml
@@ -6198,6 +6198,20 @@
  mod_planet_jobs_complex_and_simple_drone_all_industrial_upkeep_add: "$mod_planet_jobs_complex_and_simple_drone_all_industrial_upkeep_mult$"
  mod_planet_jobs_complex_and_simple_drone_all_basic_upkeep_add: "$mod_planet_jobs_complex_and_simple_drone_all_basic_upkeep_mult$"
 
+ # planet_jobs_tec_prime_drone - £job£ §BPrime Drones§!
+ mod_base_planet_jobs_tec_prime_drone: "£job£ §BPrime Drones§!"
+
+ mod_planet_jobs_tec_prime_drone_produces_mult: "$mod_base_planet_jobs_tec_prime_drone$ Output"
+
+ mod_planet_jobs_tec_prime_drone_upkeep_mult: "$mod_base_planet_jobs_tec_prime_drone$ Upkeep"
+
+ # planet_jobs_tec_brood_drone - £job£ §HBrood Drones§!
+ mod_base_planet_jobs_tec_brood_drone: "£job£ §HBrood Drones§!"
+
+ mod_planet_jobs_tec_brood_drone_produces_mult: "$mod_base_planet_jobs_tec_brood_drone$ Output"
+
+ mod_planet_jobs_tec_brood_drone_upkeep_mult: "$mod_base_planet_jobs_tec_brood_drone$ Upkeep"
+
  # planet_jobs_robotic - §BRobot§! Pop £job£ Jobs
  mod_base_planet_jobs_robotic: "§BRobot§! Pop £job£ Jobs"
 
