--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -92,6 +92,8 @@ tr_genetics_finish_extra_traits_tooltip:0 "Allows research of rare §YTransgenes
 # ------------------------------------------------------------
  tec_tradition_unlock_evolved_paths:0 "Completing the tradition and its effects will unlock §HEvolved Ascensions§!."
 
+ requires_ascension_perks_5:1 "$TRIGGER_FAIL$Requires four other Ascension Perks to be selected first."
+ requires_ascension_perks_7:1 "$TRIGGER_FAIL$Requires six other Ascension Perks to be selected first."
 # PSIONIC PATH
 # ------------------------------------------------------------
 # ------------------------------------------------- Psionic T1
@@ -103,15 +105,17 @@ tr_genetics_finish_extra_traits_tooltip:0 "Allows research of rare §YTransgenes
  mind_over_matter_project_tooltip_discovered:0 "We will prepare §Y$situation_tec_psionic_path_t1$§! situation, which will help to discover the psionic potential of our species, making them gain the §MLatent Psionic§! trait.\n\nThe Latent Psionic trait provide £job£ Job output and awakens special psychic capacities on some individuals, but reduce our species £mod_planet_pop_assembly_mult£ Natural and Artificial growth."
 
  # ---- Provides
- tec_ap_unlock_psi_theory_tech:0 "\nProvides the £society£ §Y$tech_psionic_theory$§! Technology as permanent research option."
- tec_ap_unlock_psi_telepathy_tech:0 "\nProvides the £society£ §Y$tech_telepathy$§! Technology."
+ tec_ap_unlock_tech_psionic_theory:0 "\nProvides the £society£ §Y$tech_psionic_theory$§! Technology as permanent research option."
+ tec_ap_unlock_tech_telepathy:0 "\nProvides the £society£ §Y$tech_telepathy$§! Technology."
  tec_ap_unlock_psionic_tradition:0 "\nUnlocks the §Y$tradition_tec_vanilla_psionics$§! tradition after completing the perk special project and researching the provided technologies.\n\n$tec_tradition_unlock_evolved_paths$"
 
  # ---- Gates
  ap_mind_over_matter_steps:0 "\n\n§HBase Ascension - Psionics§!"
 
  # ---- Requirements
- tec_ap_require_unification_tech:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_planetary_unification$§! technology."
+ tec_ap_require_tech_planetary_unification:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_planetary_unification$§! technology."
+ tec_ap_require_tech_colonial_centralization:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_colonial_centralization$§! technology."
+ tec_ap_require_tech_galactic_administration:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_galactic_administration$§! technology."
 
 # ------------------------------------------------- Psionic T2
  ap_tec_psionic_ascendance:0 "Psionic Ascendance"
@@ -167,15 +171,15 @@ tr_genetics_finish_extra_traits_tooltip:0 "Allows research of rare §YTransgenes
  ap_engineered_evolution_modifier_desc:1 ""
 
  # ---- Provides
- tec_ap_unlock_genemod_tech:0 "\nProvides the £society£ §Y$tech_gene_tailoring$§! Technology as permanent research option."
- tec_ap_unlock_geneseed_tech:0 "\nProvides the £society£ §Y$tech_gene_seed_purification$§! Technology."
+ tec_ap_unlock_tech_gene_tailoring:0 "\nProvides the £society£ §Y$tech_gene_tailoring$§! Technology as permanent research option."
+ tec_ap_unlock_tech_gene_seed_purification:0 "\nProvides the £society£ §Y$tech_gene_seed_purification$§! Technology."
  tec_ap_unlock_genetic_tradition:0 "\nUnlocks the §Y$tradition_tec_vanilla_genetics$§! tradition tree after completing the perk special project and researching the provided technologies.\n\n$tec_tradition_unlock_evolved_paths$"
 
  # ---- Gates
  ap_engineered_evolution_steps:0 "\n\n§HBase Ascension - Genetics§!"
 
  # ---- Requires
- tec_ap_require_genemod_tech:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_genome_mapping$§! technology."
+ tec_ap_require_tech_genome_mapping:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_genome_mapping$§! technology."
 
 # ------------------------------------------------- Gene T2
  ap_tec_genetic_perfection:0 "Genetic Perfection"
@@ -246,14 +250,14 @@ tr_genetics_finish_extra_traits_tooltip:0 "Allows research of rare §YTransgenes
  ap_tec_block_ai_uprising_cyborg_tooltip:0 "Our harmony with cybernetic technologies will §YNegate§! or §!severely mitigate§! any potential rogue AI uprising or infiltration."
  ap_tec_flesh_is_weak_change_biohive_into_cyberhive:0 "§RPLAYSTYLE CHANGE:§! Unlocking this ascension perk will convert our empire into a §E$auth_tec_hive_cybernetic$§!!\n"
  ap_tec_flesh_is_weak_can_change_hive_into_cyberhive:0 "§RPLAYSTYLE CHANGE:§! Continuing a full cybernetic path will convert our empire into a §E$auth_tec_hive_cybernetic$§!!\n"
- tec_ap_unlock_cyborg_quantum_tech:0 "\nProvides the £physics£ §Y$tech_neuro_quantum_links$§! Technology."
+ tec_ap_unlock_tech_neuro_quantum_links:0 "\nProvides the £physics£ §Y$tech_neuro_quantum_links$§! Technology."
  tec_ap_unlock_cybernetic_basic_tradition:0 "\nUnlocks the §Y$tradition_tec_vanilla_cybernetics$§! tradition after completing the §YFlesh is Weak§! special project and researching the provided technologies.\n$tec_tradition_unlock_evolved_paths$"
 
  # ---- Gates
  ap_the_flesh_is_weak_steps:0 "\n\n§HBase Ascension - Cybernetics§!"
 
  # ---- Requires
- tec_ap_require_robot_tech:1 "$TRIGGER_FAIL$Requires the £engineering£ §Y$tech_robotic_workers$§! technology."
+ tec_ap_require_tech_robotic_workers:1 "$TRIGGER_FAIL$Requires the £engineering£ §Y$tech_robotic_workers$§! technology."
 
 # ------------------------------------------------- Cyb T2
  ap_tec_cybernetic_revolution:0 "Cyber-Revolution"
@@ -291,16 +295,16 @@ tr_genetics_finish_extra_traits_tooltip:0 "Allows research of rare §YTransgenes
 
  # ---- Provides
  ap_tec_block_organic_infiltration_tooltip:0 "Our harmony with synthetic technologies will §YNegate§! any direct attempt of organic infiltration."
- tec_ap_unlock_synth_tech:0 "\nProvides the £engineering£ §Y$tech_synthetic_workers$§! Technology as permanent research option."
- tec_ap_unlock_synthleaders_tech:0 "\nProvides the £engineering£ §Y$tech_synthetic_leaders$§! Technology."
- tec_ap_unlock_machinemod_tech:0 "\nProvides the £engineering£ §Y$tech_robomodding_m$§! Technology."
+ tec_ap_unlock_tech_synthetic_workers:0 "\nProvides the £engineering£ §Y$tech_synthetic_workers$§! Technology as permanent research option."
+ tec_ap_unlock_tech_synthetic_leaders:0 "\nProvides the £engineering£ §Y$tech_synthetic_leaders$§! Technology."
+ tec_ap_unlock_tech_robomodding_m:0 "\nProvides the £engineering£ §Y$tech_robomodding_m$§! Technology."
  tec_ap_unlock_synthetics_tradition:0 "\nUnlocks the §Y$tradition_tec_vanilla_synthetics$§! tradition tree tradition after completing the §YSynthetic Evolution§! situation.\n\n$tec_tradition_unlock_evolved_paths$"
 
  # ---- Gates
  ap_synthetic_evolution_steps:0 "\n\n§HBase Ascension - Synthetics§!"
 
  # ---- Requires
- tec_ap_require_droids_tech:1 "$TRIGGER_FAIL$Requires the £engineering£ §Y$tech_droid_workers$§! technology."
+ tec_ap_require_tech_droid_workers:1 "$TRIGGER_FAIL$Requires the £engineering£ §Y$tech_droid_workers$§! technology."
  tec_ap_synthproject_stopped:0 "\n§Y£trigger_tec_warning£ The Synthetic Evolution situation is not able to progress without the proper technologies researched.§!"
 
 # ------------------------------------------------- Synth T2
@@ -379,6 +383,9 @@ tr_genetics_finish_extra_traits_tooltip:0 "Allows research of rare §YTransgenes
 # ------------------------------------------------- Purity of Form
  ap_tec_biopsionic:0 "Purity of Form"
  ap_tec_biopsionic_desc:0 "The universe is full of unknowns, from the natural question we make about our very existence, to the answers the future will, or will not answer us; but now, with the knowledge we have about the shroud, about our very creation, we can achieve a psionic potential never known, while having a physical form able to overcome any evolutionary backlash."
+
+ ap_tec_biopsionic_started_psi:0 "$ap_tec_biopsionic$"
+ ap_tec_biopsionic_started_psi_desc:0 "$ap_tec_biopsionic_desc$"
 
  ap_tec_biopsionic_hive:0 "Purity of Essence"
  ap_tec_biopsionic_hive_desc:0 "The universe is full of unknowns, from the natural question we make about our very existence, to the answers the future will, or will not answer us; but now, with the knowledge we have about the shroud, about our very creation, we can achieve a psionic potential never known, while having a physical form able to overcome any evolutionary backlash."
@@ -480,7 +487,7 @@ tr_genetics_finish_extra_traits_tooltip:0 "Allows research of rare §YTransgenes
  tec_ap_synthetic_age_stopped:0 "\n§Y£trigger_tec_warning£ The Synthetic Age situation is not able to progress without the $tech_robomodding_m$ technology researched.§!"
 
  # ---- Provides
- tec_ap_provides_mechaedit_tech:0 "\n\nProvides the §Y$tech_robomodding_m$§! Technology as permanent research option."
+ tec_ap_provides_tech_robomodding_m:0 "\n\nProvides the §Y$tech_robomodding_m$§! Technology as permanent research option."
 
  # ---- Gates
  ap_synthetic_age_steps:0 "\n\n§HTier I - Machine Mechanical path§!"
