--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -516,49 +516,55 @@ tec_jump_empty:0 "\n\n"
 
 # ------------------------------------------------- Machine
 	# Cluster drones
-# prime drone here
+	job_tec_prime_drone:0 "Prime Cluster"
+	job_tec_prime_drone_plural:0 "Prime Clusters"
+	job_tec_prime_drone_desc:0 "Highly specialized drones that represents a direct manifestation of the machine consciousness, primarily developed as a balanced way of controlling and amplifying the development of the collective as a whole."
+	job_tec_prime_drone_effect_desc:0 "£job_tec_prime_drone£ $job_tec_prime_drone_plural$ consume £energy£ §YEnergy§! for generating £unity£ §Y$unity$§!, §Y$tec_loc_amenities_gestalt$§! and §Y$tec_loc_machine_processing$§!, increased by the $tec_loc_capital_tier$."
+	mod_job_tec_prime_drone_add:0 "$job_tec_prime_drone$ Jobs"
+	mod_job_tec_prime_drone_per_pop:0 "§G+1§! £mod_job_tec_prime_drone_add£ $job_tec_prime_drone$ Job per $VALUE$ Pops"
+	mod_job_tec_prime_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_prime_drone_add£ per $VALUE$ £pop£"
 
- job_tec_alpha_drone:0 "Alpha Cluster"
- job_tec_alpha_drone_plural:0 "Alpha Clusters"
- job_tec_alpha_drone_desc:0 "Highly specialized drones designed for controlling and ensuring administrative efficiency, by serving as living emitters of the will of the Machine Intelligence."
- job_tec_alpha_drone_effect_desc:0 "£job_tec_alpha_drone£ $job_tec_alpha_drone_plural$ converts large amounts of £trigger_tec_research£ §YResearch§! into £mod_country_admin_cap_add£ §YAdministrative Capacity§!, while also generating £amenities_no_happiness£ §YAmenities§!"
- mod_job_tec_alpha_drone_add:0 "$job_tec_alpha_drone$ Jobs"
+	job_tec_alpha_drone:0 "Alpha Cluster"
+	job_tec_alpha_drone_plural:0 "Alpha Clusters"
+	job_tec_alpha_drone_desc:0 "Highly specialized drones designed for controlling and ensuring administrative efficiency, by serving as living emitters of the will of the Machine Intelligence."
+	job_tec_alpha_drone_effect_desc:0 "£job_tec_alpha_drone£ $job_tec_alpha_drone_plural$ converts large amounts of £trigger_tec_research£ §YResearch§! into £mod_country_admin_cap_add£ §YAdministrative Capacity§!, while also generating £amenities_no_happiness£ §YAmenities§!"
+	mod_job_tec_alpha_drone_add:0 "$job_tec_alpha_drone$ Jobs"
 
- job_tec_omega_drone:0 "Omega Cluster"
- job_tec_omega_drone_plural:0 "Omegas Clusters"
- job_tec_omega_drone_desc:0 "Highly specialized drones with the sole task of studying and finding new ways of avoiding stagnation or deceleration of the unitary development of the Machine Intelligence."
- job_tec_omega_drone_effect_desc:0 "£job_tec_omega_drone£ $job_tec_omega_drone_plural$ converts large amounts of £energy£ §YEnergy§! into £unity£ §Y$unity$§!, while also generating £amenities_no_happiness£ §YAmenities§!"
- mod_job_tec_omega_drone_add:0 "$job_tec_omega_drone$ Jobs"
+	job_tec_omega_drone:0 "Omega Cluster"
+	job_tec_omega_drone_plural:0 "Omegas Clusters"
+	job_tec_omega_drone_desc:0 "Highly specialized drones with the sole task of studying and finding new ways of avoiding stagnation or deceleration of the unitary development of the Machine Intelligence."
+	job_tec_omega_drone_effect_desc:0 "£job_tec_omega_drone£ $job_tec_omega_drone_plural$ converts large amounts of £energy£ §YEnergy§! into £unity£ §Y$unity$§!, while also generating £amenities_no_happiness£ §YAmenities§!"
+	mod_job_tec_omega_drone_add:0 "$job_tec_omega_drone$ Jobs"
 
- job_tec_prime_performance_drone:0 "Monitor Cluster"
- job_tec_prime_performance_drone_plural:0 "Monitor Clusters"
- job_tec_prime_performance_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, with the single purpose of improving the capacities of the collective as a whole reducing redundant or non-effective tasks."
- job_tec_prime_performance_drone_effect_desc:0 "£job_tec_prime_performance_drone£ $job_tec_prime_performance_drone_plural$ uses large amounts of £energy£ §YEnergy§! for increasing £job£ §YJob Output§! and §YUpkeep§!, while also generating £amenities_no_happiness£ §YAmenities§!"
- mod_job_tec_prime_performance_drone_add:0 "$job_tec_prime_performance_drone$ Jobs"
+	job_tec_prime_performance_drone:0 "Performance Cluster"
+	job_tec_prime_performance_drone_plural:0 "Performance Clusters"
+	job_tec_prime_performance_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, with the single purpose of improving the capacities of the collective as a whole reducing redundant or non-effective tasks."
+	job_tec_prime_performance_drone_effect_desc:0 "£job_tec_prime_performance_drone£ $job_tec_prime_performance_drone_plural$ consume £energy£ §YEnergy§! for generating £unity£ §Y$unity$§!, and §Y$tec_loc_machine_processing$§!, increased by the $tec_loc_capital_tier$, additionally increasing £job£ §YJob Output§! and §YUpkeep§!"
+	mod_job_tec_prime_performance_drone_add:0 "$job_tec_prime_performance_drone$ Jobs"
 
- job_tec_prime_research_drone:0 "Innovation Cluster"
- job_tec_prime_research_drone_plural:0 "Innovation Clusters"
- job_tec_prime_research_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, serving as multiplatform for information processing, technological development and overall advancements."
- job_tec_prime_research_drone_effect_desc:0 "£job_tec_prime_research_drone£ $job_tec_prime_research_drone_plural$ uses large amounts of £energy£ §YEnergy§! for generating £trigger_tec_research£ §YResearch§! and £amenities_no_happiness£ §YAmenities§!"
- mod_job_tec_prime_research_drone_add:0 "$job_tec_prime_research_drone$ Jobs"
+	job_tec_prime_research_drone:0 "Innovation Cluster"
+	job_tec_prime_research_drone_plural:0 "Innovation Clusters"
+	job_tec_prime_research_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, serving as multiplatform for information processing, technological development and overall advancements."
+	job_tec_prime_research_drone_effect_desc:0 "£job_tec_prime_research_drone£ $job_tec_prime_research_drone_plural$ consume £energy£ §YEnergy§! for generating £unity£ §Y$unity$§!, §Y$tec_loc_research_resources$§!, and §Y$tec_loc_machine_processing$§!, increased by the $tec_loc_capital_tier$"
+	mod_job_tec_prime_research_drone_add:0 "$job_tec_prime_research_drone$ Jobs"
 
- job_tec_prime_reimaginator_drone:0 "Reimaginator Cluster"
- job_tec_prime_reimaginator_drone_plural:0 "Reimaginator Clusters"
- job_tec_prime_reimaginator_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, constantly searching new drone forms that would suit assigned task better, or have more overall performance."
- job_tec_prime_reimaginator_drone_effect_desc:0 "£job_tec_prime_reimaginator_drone£ $job_tec_prime_reimaginator_drone_plural$ uses large amounts of £energy£ §YEnergy§! and £alloys£ §YAlloys§! for assembling £job_roboticist£ §YPops§! and £amenities_no_happiness£ §YAmenities§!"
- mod_job_tec_prime_reimaginator_drone_add:0 "$job_tec_prime_reimaginator_drone$ Jobs"
+	job_tec_prime_reimaginator_drone:0 "Reimaginator Cluster"
+	job_tec_prime_reimaginator_drone_plural:0 "Reimaginator Clusters"
+	job_tec_prime_reimaginator_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, constantly searching new drone forms that would suit assigned task better, or have more overall performance."
+	job_tec_prime_reimaginator_drone_effect_desc:0 "£job_tec_prime_reimaginator_drone£ $job_tec_prime_reimaginator_drone_plural$ uses large amounts of £energy£ §YEnergy§! and £alloys£ §YAlloys§! for assembling £job_roboticist£ §YPops§!, and producing £unity£ §Y$unity$§!, §Y$tec_loc_amenities_gestalt$§! and §Y$tec_loc_machine_processing$§!, increased by the $tec_loc_capital_tier$"
+	mod_job_tec_prime_reimaginator_drone_add:0 "$job_tec_prime_reimaginator_drone$ Jobs"
 
- job_tec_prime_debugger_drone:0 "Debugger Cluster"
- job_tec_prime_debugger_drone_plural:0 "Debugger Cluster"
- job_tec_prime_debugger_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, and constantly monitor programming code of the whole collective seeking possible corruption or deviancy."
- job_tec_prime_debugger_drone_effect_desc:0 "£job_tec_prime_debugger_drone£ $job_tec_prime_debugger_drone_plural$ uses large amounts of £energy£ §YEnergy§! for greatly reducing £crime£ §YDeviancy§! and generating £amenities_no_happiness£ §YAmenities§!"
- mod_job_tec_prime_debugger_drone_add:0 "$job_tec_prime_debugger_drone$ Jobs"
+	job_tec_prime_debugger_drone:0 "Debugger Cluster"
+	job_tec_prime_debugger_drone_plural:0 "Debugger Cluster"
+	job_tec_prime_debugger_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, and constantly monitor programming code of the whole collective seeking possible corruption or deviancy."
+	job_tec_prime_debugger_drone_effect_desc:0 "£job_tec_prime_debugger_drone£ $job_tec_prime_debugger_drone_plural$ uses large amounts of £energy£ §YEnergy§! for greatly reducing £crime£ §YDeviancy§! and generating £unity£ §Y$unity$§!, §Y$tec_loc_amenities_gestalt$§! and §Y$tec_loc_machine_processing$§!, increased by the $tec_loc_capital_tier$"
+	mod_job_tec_prime_debugger_drone_add:0 "$job_tec_prime_debugger_drone$ Jobs"
 
- job_tec_prime_warform_drone:0 "Warform Cluster"
- job_tec_prime_warform_drone_plural:0 "Warform Cluster"
- job_tec_prime_warform_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, being mobile platforms of control, defense and attack that protects the primary nexus of the planet with high efficiency, while also coordinating external fleet movements on the fly."
- job_tec_prime_warform_drone_effect_desc:0 "£job_tec_prime_warform_drone£ $job_tec_prime_warform_drone_plural$ uses large amounts of £energy£ §YEnergy§! for increasing £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, spawning £defense_army£ §Y$tec_warform_def_plural$§! and generating £amenities_no_happiness£ §YAmenities§!"
- mod_job_tec_prime_warform_drone_add:0 "$job_tec_prime_warform_drone$ Jobs"
+	job_tec_prime_warform_drone:0 "Warform Cluster"
+	job_tec_prime_warform_drone_plural:0 "Warform Cluster"
+	job_tec_prime_warform_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, being mobile platforms of control, defense and attack that protects the primary nexus of the planet with high efficiency, while also coordinating external fleet movements on the fly."
+	job_tec_prime_warform_drone_effect_desc:0 "£job_tec_prime_warform_drone£ $job_tec_prime_warform_drone_plural$ uses large amounts of £energy£ §YEnergy§! for increasing £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, spawning £defense_army£ §Y$tec_warform_def_plural$§! and generating £unity£ §Y$unity$§!, §Y$tec_loc_amenities_gestalt$§! and §Y$tec_loc_machine_processing$§!, increased by the $tec_loc_capital_tier$"
+	mod_job_tec_prime_warform_drone_add:0 "$job_tec_prime_warform_drone$ Jobs"
 
 # ---------------------------------------------------------------
 #	ETHIC FEATURES
