--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -19,7 +19,7 @@
 # §Y thisisyellow §!
 
 # --------------------------- MAINSCREEN -------------------------------- #DATE DATE DATE DATE
- TEC_EVOLVED_VERSION:0 "Evolved Version: v0.9R4 (§Y21-01-2022§!)"
+ TEC_EVOLVED_VERSION:0 "Evolved Version: v0.9R5 (§Y22-03-2023§!)"
  TEC_EVOLVED_TOOLTIP:0 "§E$TEC_EVOLVED_TITLE$§!\n§Y$TEC_EVOLVED_STEAMLINK$§!\n$TEC_EVOLVED_REPORTS$\n\n$TEC_EVOLVED_DONATIONS$"
  TEC_EVOLVED_TITLE:0 "Stellaris Evolved"
  TEC_EVOLVED_STEAMLINK:0 "Clicking this item will open the mod Steam Workshop page"
@@ -70,8 +70,8 @@
  tec_loc_psychic_pop_output:0 "£tec_psychic_icon£ Psychic Pop Output"
  tec_loc_automation_output:0 "£job_roboticist£ Automation Output"
 
- tec_loc_machine_processing:0 "£sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!"
- tec_loc_machine_redirection:0 "£sr_tec_machine_processing_redirection£ §Y$sr_tec_machine_processing_redirection$§!"
+ tec_loc_machine_processing:0 "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$"
+ tec_loc_machine_processing_redirection:0 "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$"
 
  tec_loc_habitability:0 "£mod_habitability_floor_add£ Habitability"
  tec_loc_planet_capacity:0 "£mod_planet_carry_cap_add£ $CARRY_CAP$"
